--- a/Front.html
+++ b/Front.html
@@ -1,1 +1,64 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Sprint Review Report - Sprint #2</title>
+    <style>
+        body { font-family: Arial, sans-serif; }
+        h1, h2 { color: #333; }
+        table { width: 100%; border-collapse: collapse; }
+        th, td { border: 1px solid #999; padding: 8px; text-align: left; }
+        th { background-color: #f2f2f2; }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Sprint Review Report: Sprint #2</h1>
+        <p><strong>Version 1.0</strong> | 3.19.2024</p>
+        <p>Prepared for CS 1530 Software Engineering, Spring 2024, University of Pittsburgh</p>
+    </header>
+    <section>
+        <h2>1. Introduction</h2>
+        <p>After initializing and configuring the environment in Sprint 1, this sprint focuses on beginning to implement the features of the project. We created a CLI for initial control of the system and began work on the graphical interface...</p>
+    </section>
+    <section>
+        <h2>2. Specific Goals</h2>
+        <!-- Stories Table -->
+        <table>
+            <thead>
+                <tr>
+                    <th>Story Number</th>
+                    <th>Description</th>
+                    <th>Assigned To</th>
+                    <th>Points</th>
+                    <th>Status</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- Repeat rows for each story -->
+                <tr>
+                    <td>2.1</td>
+                    <td>Create basic Command Line Interface (CLI)</td>
+                    <td>Jaiden Slifer</td>
+                    <td>2</td>
+                    <td>Completed</td>
+                </tr>
+                <!-- Add other stories here -->
+            </tbody>
+        </table>
+    </section>
+    <section>
+        <h2>3. Analytics</h2>
+        <h3>3.1 Sprint/Product Burndown Chart</h3>
+        <!-- Placeholder for Burndown Chart -->
+        <p><img src="path_to_your_burndown_chart_image.png" alt="Sprint Burndown Chart"></p>
+        <h3>3.2 Sprint Velocity</h3>
+        <!-- Placeholder for Velocity Chart -->
+        <p><img src="path_to_your_velocity_chart_image.png" alt="Sprint Velocity Chart"></p>
+    </section>
+    <section>
+        <h2>4. Conclusion</h2>
+        <p>We were unable to meet the deadline of this sprint for 2 stories totaling 16 points. We will have to increase velocity for the next two sprints to meet our deadline...</p>
+    </section>
+</body>
+</html>
